Added constraints for entities, вщсresources management for doctors, exception handling, cache injection refactored